# CSC4110-Rain-Alert

./: .gitignore  Basic_Menu.cc  CMakeLists.txt  Configuration_example.xml  Debug Functions.cc  DebugLog.cc  DebugLog.h  Dialog_Menu.cc  Doxyfile  LICENSE  Main.cc  Newt_Menu.cc  Project.h  Project_Base.h  Project_Settings_example.xml  Readme.md  Readme.org  SensorDate.cc  SensorDate.h  SensorTracking.cc  Sensor_Date.cc  Sensor_Tracking.cc  Settings.cc  Settings.h  Test.cc  XML_Configuration.cc  XML_Configuration.h  help.txt  index.md  main.cpp
.github/workflows/: codeql-analysis.yml  main.yml
docs/: index.md
docs/html/: Alternative__Sensor_8cc.html  Alternative__Sensor_8cc__incl.map  Alternative__Sensor_8cc__incl.md5  Basic__Menu_8cc.html  Basic__Menu_8cc__incl.map  Basic__Menu_8cc__incl.md5  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Check__Sensors_8cc.html  Check__Sensors_8cc__incl.map  Check__Sensors_8cc__incl.md5  Debug_01Functions_8cc.html  Debug_01Functions_8cc__incl.map  Debug_01Functions_8cc__incl.md5  Float__Sensor_8cc.html  Float__Sensor_8cc__incl.map  Float__Sensor_8cc__incl.md5  Log_8cc.html  Log_8cc__incl.map  Log_8cc__incl.md5  Log_8h.html  Log_8h__dep__incl.map  Log_8h__dep__incl.md5  Log_8h__incl.map  Log_8h__incl.md5  Log_8h_source.html  Main_8cc.html  Main_8cc__incl.map  Main_8cc__incl.md5  Newt__Menu_8cc.html  Newt__Menu_8cc__incl.map  Newt__Menu_8cc__incl.md5  PSQL__Connection_8cc.html  PSQL__Connection_8cc__incl.map  PSQL__Connection_8cc__incl.md5  PSQL__Connection_8h.html  PSQL__Connection_8h__dep__incl.map  PSQL__Connection_8h__dep__incl.md5  PSQL__Connection_8h__incl.map  PSQL__Connection_8h__incl.md5  (+99 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+40 more)
include/: Project_Version.h.in
log/: Log.cc  Log.h  SensorLog.cc  SensorLog.h  html_template.html  log.cpp
modules/: FindPQXX.cmake
sensors/: AbstractSensor.h  Alternative_Sensor.cc  Alternative_Sensor.h  Check_Sensors.cc  DummySensor.cc  DummySensor.h  Float_Sensor.cc  Rain_Gauge.cc  RealSensor.cc  RealSensor.h  Sensor.h
settings/: Project_Settings.xml  Project_Settings_example.xml  smtp_info_example.txt  time_info_example.txt
sql/: Connection.cc  Connection.h  PSQL_Connection.cc  PSQL_Connection.h  csc4110_project.psql  csc4110_project.sql  database_info_example.txt  database_layout.txt  db_populate.sql
